--- a/src/components/PostComponent.css
+++ b/src/components/PostComponent.css
@@ -5,6 +5,8 @@
     margin-top: 20px;
     height: auto;
     box-shadow: 0px 3px 8px rgba(0, 0, 0, .24);
+    font-family: 'Montserrat', sans-serif;
+    background-color: #F3E9DD;
 }
 
 .post-header{
