--- a/src/components/ProfileComponent.css
+++ b/src/components/ProfileComponent.css
@@ -1,3 +1,36 @@
 .profile{
+    width: 600px;
+    height: fit-content;
+    border-radius: 15px;
+    padding: 10px;
+    margin-top: 20px;
+    box-shadow: 0px 3px 8px rgba(0, 0, 0, .24);
     font-family: 'Montserrat', sans-serif;
+    background-color: #F3E9DD;
+}
+
+.profile-img{
+    margin-top: 20px;
+}
+
+.profile-data{
+    margin-top: 20px;
+}
+
+.description-label{
+    text-align: left;
+}
+
+.profile-description{
+    border-style: solid;
+    border-radius: 10px;
+    height: auto;
+    max-height: 600px;
+    overflow-y: auto;
+    text-align: left;
+    padding: 10px;
+}
+
+.edit-description{
+    margin-top: 10px;
 }
